--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
         env:
           SSH_HOST: ${{ secrets.SSH_HOST }}
           SSH_USER: ${{ secrets.SSH_USER }}
-          PORT: ${{ secrets.PORT }}
+          SSH_PORT: ${{ secrets.SSH_PORT }}
         run: | 
-          ssh -p $PORT $SSH_USER@$SSH_HOST 'cd /var/www/html/Portfolio && git fetch && git pull'
+          ssh -p $SSH_PORT $SSH_USER@$SSH_HOST 'cd /var/www/html/Portfolio && git fetch && git pull'
